GetCourse func complete
