# routes/courseRouter.go
@@ -12,6 +12,7 @@ func CourseRoutes(router *gin.RouterGroup, db *sql.DB) {
 	router.GET("/", controllers.GetCourses(db))
 	router.GET("/:id", middleware.AuthMiddleware(), controllers.GetCourse(db))
 	router.POST("/", middleware.OnlyAdminMiddleware(), controllers.CreateCourse(db))
+	router.POST("/activate", middleware.OnlyAdminMiddleware(), controllers.ActivateCourseForUser(db))
 	router.PUT("/:id", middleware.OnlyAdminMiddleware(), controllers.UpdateCourse(db))
 	router.DELETE("/:id", middleware.OnlyAdminMiddleware(), controllers.DeleteCourse(db))
 }
